yoshimi 1.5.M

2019-5-4 Will
* Added CLI access to spot noise.
* Linked spot noise appearance to single master feature.
* Rationalised interchange parameters for setpadparams.
* Updated docs.

2019-5-3 Will
* BugFix: Primary definition of singlePath in wrong file.
* 'Enable Single Master' now always hidden for LV2.
  It's not relevant to it at all.
* CLI can now handle single master control.
* Updated docs.
* First trial of spot noise.

2019-5-1 Will
* All Interface files have no 'using namespace std'
* All MusicIO files have no 'using namespace std'
* Single master instance now properly accessed.
  Not CLI yet.

2019-4-30 Will
* Single master instance now switchable from GUI.
  Also made some refinements to code allowing this
  to be hidden until certain it's safe.
* BugFix: Crashes on some systems when opening the GUI.
* Refined instance startup tests in main()

2019-4-25 Will
* Added PART_POLIPONY to globals
  It had been defined numerically in two places!
* Added PART_POLY, PART_MONO, PART_LEGATO, MIDI_LEGATO
  MIDI_NOT_LEGATO to globals
  These had been set numerically in multiple locations.
* More transfers from 'using namespace' to 'std::'

2019-4-24 Will
* Added tooltips to master and part VU meters.
* Single main instance now seems correct.
  A first start double-click will still start two
  separate instances, but all other combinations
  will start just one, without risk of a crash
  through tring to start multiple instances at
  the same time.

2019-4-23 Will
* Removed redundant 'detach' thread element.
* Started entering 'std::' not 'using namespace'.
  This removes potential ambiguities, especially
  as we are now using local namespaces heavily.
* Some code cleanups.

2019-4-22 Will
* Internal 'no action' moved to new source byte.
* Adjustments to new placeholders.

2019-4-21 Will
* Set placeholders for new type/source bytes.
* Applied warning patch in main.cpp from Hermann.
* Doc updates
* Click on mixer part VU now cleared limit warning.
