@@ -20,7 +20,7 @@ Y : any : 88 : 240 : 255 : 255 : 255 : 128 : msg No. : Load named scale via misc
 Y : any : 89 : 240 : 255 : 255 : 255 : 128 : msg No. : Save named scale via miscMgs
 Y : any : 92 : 240 : 255 : 255 : 255 : 192 : msg No. : Load named state via miscMgs
 Y : any : 93 : 240 : 255 : 255 : 255 : 128 : msg No. : Save named state via miscMgs
-Y : any : 94 : 240 : 0 to 15 : 255 : 255 : 128 + 0 to 63: msg No. : Export PadSynth samples to named prefix via miscMsg
+Y : any : 94 : 240 : 0 to 15 : 255 : 0 to 63 : 128: msg No. : Export PadSynth samples to named prefix via miscMsg
 Y : any : 96 : 240 : 255 : 255 : 255 : 192 : 255 : Reset (clear all)
 Y : any : 97 : 240 : 255 : 255 : 255 : 192 : 255 : Reset including MIDI-learn
 Y : 1 to 31 : 104 : 240 : 255 : 255 : 255 : 128 : 255 : Create new numbered instance
